fix UI collapsing to 2 columns of numbers

--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,12 @@
 #btn-numbers {
     display: flex;
     flex-flow: row-reverse wrap;
-    flex-basis: 60%;
+    flex: 1 0 calc(100% / 4 *3 - 12px);
 }
 
 #btn-operators {
     display: flex;
-    flex-basis: 60%;
+    flex-basis: calc(100% / 4 *1 - 4px);
     flex-direction: column;
 }
 
@@ -38,22 +38,21 @@
 }
 
 .btn-number {
-    flex: 1 0 32%;
+    flex: 1 0 calc(100% /3 - 4px);
     background-color: bisque;
 }
 
 .btn-equal {
-    flex: 1 0 65%;
+    flex: 1 0 calc(100% /3 *2 - 4px);
     background-color: burlywood;
 }
 
 .btn-operator {
-    flex-basis: 24%;
     background-color: rgb(170, 139, 86);
 }
 
 .btn-other {
-    flex-basis: 50%;
+    flex-basis: calc(100% / 2 - 0px);
     background-color: rgb(207, 115, 115);
 }
 
